<resources>
    <string name="app_name">mCash</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_basket">Basket</string>
    <string name="plus">+</string>
    <string name="title_payment">Payment</string>
    <string name="label_null_€">0,00 €</string>
    <string name="lable_clear">Clear</string>
    <string name="sign_discount">%</string>
    <string name="label_ok">Ok</string>
    <string name="label_login">Login</string>
    <string name="label_total">Total</string>
    <string name="label_cash">Cash</string>
    <string name="mwst">Mwst.:</string>
    <string name="example_date">07.03.2015</string>
    <string name="cancellation">Cancellation</string>
    <string name="example_time">00:00</string>
    <string name="example_name">Max Mustermann</string>
    <string name="payent_details">Paymentdetails</string>
    <string name="_null">0</string>
    <string name="exampl_status">Status</string>
    <string name="title_payments">Payments</string>
    <string name="title_products">Products</string>
    <string name="title_paymentdetails">Paymentdetails</string>
    <string name="example_count">2x</string>
    <string name="minus">-</string>
    <string name="change">Change</string>
    <string name="logout">Logout</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="left"><![CDATA[<]]></string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="logintext">Login with cashier account</string>
    <string name="cash_amount">Cash amount</string>
    <string name="password">password</string>
    <string name="id">id</string>
    <string name="total_amount">Total amount</string>
    <string name="discount">Discount</string>
    <string name="percentage">Percentage</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="manual_entry">Manual entry</string>
    <string name="price">Price</string>
    <string name="euro_sign">€</string>
    <string name="cancellation_question">Cancel payment?</string>
    <string name="shopping_cart_empty">The shopping cart is empty</string>
    <string name="no_payments">No payments found</string>
    <string name="no_orders">No orders found</string>
    <string name="incorrect_message">Incorrect combination of id and password</string>
    <string name="product_search">Product search</string>
    <string name="search_hint">Name / Id / Price</string>
    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="delete_order">Delete order</string>
    <string name="edit_order">Edit order</string>
    <string name="No_products">No products found</string>
    <string name="no_payment_selected">No payment selected</string>
    <string name="no_order_selected">No order selected</string>
    <string name="total">Total</string>
    <string name="cash">Cash</string>
    <string name="complete_payment">Complete payment</string>
    <string name="enter_cash_amount">Enter cash amount</string>

</resources>
