<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project_c.LoginActivity"
    android:background="@color/grey_light_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout8"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_error"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/error"
            android:visibility="gone"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/incorrect_message"
            android:id="@+id/textView_error"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/editText_id"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="@string/id"
            android:layout_marginTop="15dp"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText_pw"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/button1"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/label_ok"
            style="@style/button"
            android:layout_marginBottom="70dp"
            android:background="@color/green"
            android:layout_width="wrap_content" />

    </LinearLayout>

</RelativeLayout>