<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0c0c0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#cccccc"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_basket"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#404040" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/button_menu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/launcher_1_small"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button1"
                android:layout_alignParentRight="true"
                android:text="@string/label_null_€"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="6dp"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:layout_gravity="right"
                android:layout_marginTop="6dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/button2"
                        android:text="@string/lable_clear"
                        android:layout_margin="6dp"
                        style="@style/button_red" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="45dp"
                        android:layout_height="35dp"
                        android:text="@string/sign_discount"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        android:background="#808080"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginBottom="6dp" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="45dp"
                        android:layout_height="35dp"
                        android:text="@string/plus"
                        android:background="#808080"
                        android:padding="6dp"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginBottom="6dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5.21">

                    <Button
                        android:id="@+id/button1"
                        android:layout_margin="6dp"
                        android:text="@string/title_payment"
                        style="@style/button_green"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="right" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout1"
        android:layout_below="@id/RelativeLayout2" >
    </ListView>

</RelativeLayout>